ANOTHER FIX IN SWAGGER. now it works with Authorize tokens and have better view
